Added Beam work experience

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,9 @@
 # Jobs
+# DevOps Architect
+- company: Beam Mobility
+  position: DevOps Architect
+  duration: Nov, 2020 &mdash; Present
+  summary: DevOps strategies and cloud infrastructure bases on AWS.
 # DevOps
 - company: Aptargroup, Inc
   position: DevOps Consultant
