--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 - skill: Soft Skills
   description: <ul class="resume-item-list">
-    <li>Empathy and personal/team communication skills/li>
+    <li>Empathy and personal/team communication skills</li>
     <li>Continuous technical and personal improvement</li>
     <li>Creative thinking and open-mindedness</li>
     <li>Adaptability</li>
