--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Beam Mobility
   position: DevOps Architect
   duration: Nov, 2020 &mdash; Present
-  summary: DevOps strategies and cloud infrastructure bases on AWS.
+  summary: DevOps strategies and cloud infrastructure based on AWS.
 # DevOps
 - company: Aptargroup, Inc
   position: DevOps Consultant
