--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 # DevOps Architect
 - company: Beam Mobility
-  position: DevOps Architect
+  position: Cloud and DevOps Architect
   duration: Nov, 2020 &mdash; Present
   summary: DevOps strategies and cloud infrastructure bases on AWS.
 # DevOps
