--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -16,7 +16,7 @@
     <li>Rancher UI</li>
     <li>AWX (Ansible Tower)</li>
     <li>Terraform</li>
-    <li>Security practices, attention t</li>
+    <li>Security practices</li>
     </ul>
 
 - skill: Cloud Platforms
