--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Jungsun Yoo"
-resume_title:                   "Graduate student at UCI Cognitive Sciences"
+resume_title:                   "Graduate student at UCI"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "jungsun.yoo@uci.edu"
@@ -23,7 +23,7 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>I am a graduate student at UC Irvine studying Cognitive Science with a concentration on Cognitive Neuroscience. In Prof. Aaron Bornstein's lab, I investigate the algorithmic structure of reward-guided decision and reinforcement learnig (RL) as an intersection of human and artificial intelligence. I am mainly interested in human memory-based decision making, reward-enhanced learning, and human and/or agent reinforcement learning.</p>"
+resume_header_intro: "<p>I am a graduate student at UC Irvine studying cognitive science with a concentration in cognitive neuroscience. In Prof. Aaron Bornstein's lab, I investigate the algorithmic structure of reward-guided decision making and reinforcement learnig (RL). I am mainly interested in memory-based decision making and RL in both humans and artificial intelligence (AI).</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
