--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>I am a graduate student at UC Irvine studying cognitive science with a concentration in cognitive neuroscience. In Prof. Aaron Bornstein's lab, I investigate the algorithmic structure of reward-guided decision making and reinforcement learnig (RL). I am mainly interested in memory-based decision making and RL in both humans and artificial intelligence (AI).</p>"
+resume_header_intro: "<p>I am a graduate student at UC Irvine studying cognitive science with a concentration in cognitive neuroscience. In Prof. Aaron Bornstein's lab, I investigate the algorithmic structure of reward-guided decision making and reinforcement learning (RL). I am mainly interested in memory-guided decision-making and RL in both humans and artificial intelligence (AI).</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
