--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Bachelor of Science, Computer Science
+  uni: James Madison University
+  year: 2009 &mdash; 2014
+  # awards:
+    # - award: Summa Cumme Laude graduate
+  # summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+  uni: Frank W. Cox High School
+  year: 2009
+  # award: Most likely to succeed
+  # summary: You can choose to have either a single or multiple awards
