--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,2 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+# - description: Human rights and world affairs
