--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -12,7 +12,7 @@
 - award: Best in Technology Award
   organization: The Home Depot
   year: 2018
-  summary: Best in Delivering the Orange Promise
+  summary: Best in Delivering the 'Orange Promise' to our customers by enabling homedepot.com to bundle sales and installation of certain products
 
 - award: Game of Code Winner
   organization: The Home Depot
