--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,9 +1,9 @@
-# Skills
-# Organizational leadership
-- skill: Technical
-  description: List of technical skills
+# # Skills
+# # Organizational leadership
+# - skill: Technical
+#   description: List of technical skills
 
-# Communications strategy
-- skill: Agile
-  description: Three Legged Stools
+# # Communications strategy
+# - skill: Agile
+#   description: Three Legged Stools
 
