--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
 - description: Rock climbing, specifically the practice of Bouldering
-- description: Music creation using teenage engineering synthesizers and a Fender Strat 
+- description: Music creation using modular synthesizers and a Fender Strat 
 - description: Mountain biking, I love to get outdoors with my Cannondale Trail SL-4
