Updated work experience

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,7 +11,7 @@
   award: 
   summary: 
 
-- certs:
+  certs:
     - cert: Cisco Certified Network Professional Voice
     - cert: Cisco Certified Network Professional
     - cert: Cisco Certified Design Professional
