--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,4 +1,10 @@
 # Recognitions
+- award: CKA - Certified Kubernetes Administrator 
+  organization: The Linux Foundation
+  year: 2021
+  summary:  <p>Certification Date - Sept 12, 2021<br>
+               Certification ID - LF-upfd9v2ne3<br>
+               <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="aa6275bd-ec47-4587-84c0-6282eb569323" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 - award: Certified Rancher Operator - Level One
   organization: Rancher Labs
   year: 2020
@@ -12,4 +18,4 @@
   year: 2017
   summary:  <p>Certification Date - Saturday, September 16, 2017<br>
                Candidate ID - VMW-02120218G-00616311<br>
-               <div data-iframe-width="270" data-iframe-height="270" data-share-badge-id="a334b4ba-2248-4d0d-b0d3-89e1f7cfc909" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script></p>
+              <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a334b4ba-2248-4d0d-b0d3-89e1f7cfc909" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
