--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,13 +6,13 @@
   summary: DevOps strategies and cloud infrastructure based on AWS.
 # DevOps
 - company: Aptargroup, Inc
-  position: DevOps Consultant
+  position: DevOps Engineer, IS Software Engineering
   duration: Jan, 2020 &mdash; Present
   summary: CI/CD strategies, legacy and actual software and codebase management/deploy, Kubernetes infrastructure, Raspberry infrastructure with k3s, application monitoring, DevOps tools and methods, research & development.
 # DevOps
 - company: Aesys
   position: DevOps Consultant
-  duration: Jan, 2020 &mdash; Present
+  duration: Jan, 2020 &mdash; Jun, 2021
   summary: DevOps consultant.
 # SysAdmin
 - company: IMM Hydraulics S.p.a
