--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: B.S Computer Science & Data Science
+  uni: Seattle University
+  year: September 2019 &mdash; June 2023
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    - award: President's List
+  summary: At SU I am taking coursework to learn more about Computer Science and Data Science. I have studied Data Structures and Object Oriented Programming, primarily using C++ and C#. Next quarter, I plan on taking Databases and Data Visualization. By Spring 2022, I will have studied Algorithms as well. My cumulative GPA is a 3.7.
 
 - degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+  uni: Iolani High School
+  year: 2019
+  award: Headmasters List
+  summary: 
