--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,9 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+# Nalu Health Bar
+- company: Nalu Health Bar
+  position: Cafe Associate
+  duration: April 2021 &mdash; September 2021
+  summary: I worked at local cafe during the Covid-19 pandemic where I learned how to make acai bowls, smoothies, coffee, juices, and toasts. I worked in a fast paced enviroment where it was essential to learn the tasks in an efficient and timely matter. I also maintained daily sanitation where I wiped down counters, swept, mopped, and washed dishes. A couple months into the position, I was also a trainer where I taught new employees the tasks we accomplish everyday. I also collaborated new ideas with teammembers to make the workplace more efficient. I leanred how to be a leader and a teammember.
 
 # Director of Digital Stratgy
 - company: United Nations Human Rights Council
