--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,17 +3,17 @@
 - company: Nalu Health Bar
   position: Cafe Associate
   duration: April 2021 &mdash; September 2021
-  summary: I worked at local cafe during the Covid-19 pandemic where I learned how to make acai bowls, smoothies, coffee, juices, and toasts. I worked in a fast paced enviroment where it was essential to learn the tasks in an efficient and timely matter. I also maintained daily sanitation where I wiped down counters, swept, mopped, and washed dishes. A couple months into the position, I was also a trainer where I taught new employees the tasks we accomplish everyday. I also collaborated new ideas with teammembers to make the workplace more efficient. I leanred how to be a leader and a teammember.
+  summary: I worked at local cafe during the Covid-19 pandemic where I learned how to make acai bowls, smoothies, coffee, juices, and toasts. I worked in a fast paced enviroment where it was essential to learn the tasks in an efficient and timely matter. I also maintained daily sanitation where I wiped down counters, swept, mopped, and washed dishes. A couple months into the position, I was also a trainer where I taught new employees the tasks we accomplished everyday. I also collaborated new ideas with teammembers to make the workplace more efficient. I not only learned how to be a teammember, but also a leader.
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+# Core Power Yoga
+- company: Core Power Yoga
+  position: Studio Experience Team
+  duration:  January 2020 &mdash; March 2020
+  summary: Right before the Covid-19 outbreak, I worked at Core Power Yoga as a Studio Experience Teammember. I have been a Core Power Yoga member for four years, following a journey through yoga. I was able to give back to the yoga community I felt grounded in by creating a safe and healthy environment for Core Power Yoga members. I wiped down yoga equiptment, studios, and interracted with customers on a daily basis making them feel as welcomed as possible.
 
 
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+# Assistant Tennis Coach
+- company: 'Iolani School
+  position: Assistant Tennis Coach
+  duration:   September 2018  &mdash; July 2019
+  summary: I worked at my highschool as an assistant tennis coach where I taught children of ages five to sixteen the basics of tennis. By being on the 'Iolani Tennis Team since 7th grade and playing tennis since I was five years old, I was able to give back to my community and inspire others to love the sport. I ran simple conditoning drills and paitiently demonstrated basic tennis techniques. I learned how to be a leader and a good role model for the future athletes to be. 
