--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Mari Kwee's Website"
+description: "Mari Kwee's Resume."
 
 # Build settings
 markdown: kramdown
