--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,8 +9,8 @@
   description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
 
 # Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
+- project: Resume Website
+  role: Github Repository
+  duration: 
   # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+  description: Used Github to create a resume website using HTML and CSS. 
