--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,15 +2,15 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
+#- project: jazznotes.io
+#  role: Founder & Primary Developer
+ # duration: 2012 &mdash; Present
   # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+ # description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
 
 # Springfield Community Outreach Group
 - project: Resume Website
   role: Github Repository
-  duration: 
+  duration: 2021
   # url: "#"
   description: Used Github to create a resume website using HTML and CSS. 
