--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,12 @@
 # Skills
-# Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+# Programming Languages
+- skill: Programming Languages
+  description: The primary languages I have learned are C++ and C#. I have also learned the basics of Python through self-teaching.  
 
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+# Mathematics
+- skill: Mathematics
+  description: I have a strong math ability which is notable through my previous coursework of Calculus and Linear Algebra. 
 
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# Other
+- skill: Other
+  description: I am a fast learner who can adapt easily to any situation. I am very organized and always finish my work a couple days in advance. I am good at time management and working in group settings. 
