--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -5,7 +5,7 @@
 
 # Mathematics
 - skill: Mathematics
-  description: I have a strong math ability which is notable through my previous coursework of Calculus and Linear Algebra. 
+  description: I have a strong math ability which is notable through my previous coursework of Calculus courses and Linear Algebra. 
 
 # Other
 - skill: Other
