--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -9,4 +9,4 @@
 
 # Other
 - skill: Other
-  description: I am a fast learner who can adapt easily to any situation. I am very organized and always finish my work a couple days in advance. I am good at time management and working in group settings. 
+  description: I am a fast learner who can adapt easily to any situation. I have an excellent work ethic and always finish my work a couple days in advance. I am good at time management and working in group settings. 
