--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,11 +9,11 @@
 - company: Core Power Yoga
   position: Studio Experience Team
   duration: January 2020 &mdash; March 2020
-  summary: Right before the Covid-19 outbreak, I worked at Core Power Yoga as a Studio Experience Teammember. I have been a Core Power Yoga member for four years, following a journey through yoga. I was able to give back to the yoga community I felt grounded in by creating a safe and healthy environment for Core Power Yoga members. I wiped down yoga equiptment, studios, and interracted with customers on a daily basis making them feel as welcomed as possible.
+  summary: Right before the Covid-19 outbreak, I worked at Core Power Yoga as a Studio Experience Teammember. I have been a Core Power Yoga member for four years, following a journey through yoga. I was able to give back to the yoga community I felt grounded in by creating a safe and healthy environment for members. I wiped down yoga equiptment, sanitized studios, and interracted with customers on a daily basis making them feel as welcomed as possible.
 
 
 # Assistant Tennis Coach
 - company: Iolani School
   position: Assistant Tennis Coach
   duration: September 2018  &mdash; July 2019
-  summary: I worked at my highschool as an assistant tennis coach where I taught children of ages five to sixteen the basics of tennis. By being on the Iolani Tennis Team since 7th grade and playing tennis since I was five years old, I was able to give back to my community and inspire others to love the sport. I ran simple conditoning drills and paitiently demonstrated basic tennis techniques. I learned how to be a leader and a good role model for the future athletes to be. 
+  summary: I worked at my highschool as an assistant tennis coach where I taught children of ages five to sixteen the basics of tennis. By being on the Iolani Tennis Team since 7th grade and playing tennis since I was five years old, I was able to give back to my community and inspire others to love the sport. I ran simple conditoning drills and paitiently demonstrated basic tennis techniques. I learned how to be a leader and a good role model. 
