--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -5,10 +5,10 @@
   role: Member
   year: 2019 &mdash; Present
   #url: https://www.peta.org/
-  summary: 
+  summary: I am a member of the Seattle U Hawaii Club where I am enriched in the cultural heritage of Hawaii. I am part of a community that provides a home away from home and where I am able to meet others who grew up with the same culture. Being a part of this club has taught me the importance of family and maintaining strong community bonds.   
 
 - organization: Society of Women Engineers
   role: Member
   year: 2021 &mdash; Present
   #url: http://campuspress.yale.edu/amnesty/
-  summary: 
+  summary: I am a member of the Society of Women Engineers that promotes women's passion in engineering. I am part of a comminity that supports women in the industy and one that makes me feel welcomed and understood.
