--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,6 +1,5 @@
 # Interests
-- description: Yoga: I have been a member of Core Power Yoga since my freshman year of high school. I have committed myself through a journey of yoga and it has now become my lifystle.
-- description: Health and Wellness
-- description: Surfing: During the Covid-19 pandemic, I spent my time learning how to surf. It was difficult at first, but it quickly became one of my favorite passions that I hope to continue improving on.
-- description: Running: I have become an avid runner that is part of my lifestyle as well. I started running during the Covid-19 pandemic as well, and now it is something I look forward to everyday.
-- description: Tennis: I have played tennis since I was five years old and it is still one of my many passions. Although I do not play competitvely for a team anymore, it is something I enjoy doing in my free time with friends and family. 
+- description: Yoga: I have been a member of Core Power Yoga since my freshman year of high school. 
+- description: Surfing: During the Covid-19 pandemic, I spent my time learning how to surf.
+- description: Running: I have become an avid runner that is part of my lifestyle as well. 
+- description: Tennis: I have played tennis since I was five years old and it is still one of my many passions.
