--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,5 @@
 # Interests
-- description: Yoga: I have been a member of Core Power Yoga since my freshman year of high school. 
-- description: Surfing: During the Covid-19 pandemic, I spent my time learning how to surf.
-- description: Running: I have become an avid runner that is part of my lifestyle as well. 
-- description: Tennis: I have played tennis since I was five years old and it is still one of my many passions.
+- description: Yoga
+- description: Surfing 
+- description: Running 
+- description: Tennis
