--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,10 @@
   year: September 2019 &mdash; June 2023
   awards:
     - award: President's List
-  summary: At SU I am taking coursework to learn more about Computer Science and Data Science. I have studied Data Structures and Object Oriented Programming, primarily using C++ and C#. Next quarter, I plan on taking Databases and Data Visualization. By Spring 2022, I will have studied Algorithms as well. My cumulative GPA is a 3.7.
+  summary: At SU I am taking coursework to learn more about Computer Science and Data Science. 
+           I have studied Data Structures and Object Oriented Programming, primarily using C++ and C#. 
+           Next quarter, I plan on taking Databases and Data Visualization. By Spring 2022, I will have studied Algorithms as well. 
+           My cumulative GPA is a 3.7.
 
 - degree: High School Diploma
   uni: Iolani High School
