--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,7 +6,7 @@
     - award: President's List
   summary: At SU I am taking coursework to learn more about Computer Science and Data Science. 
            I have studied Data Structures and Object Oriented Programming, primarily using C++ and C#. 
-           Next quarter, I plan on taking Databases and Data Visualization. By Spring 2022, I will have studied Algorithms as well. 
+           Next quarter, I plan on taking Databases and Data Visualization.  
            My cumulative GPA is a 3.7.
 
 - degree: High School Diploma
