--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   uni: Seattle University
   year: September 2019 &mdash; June 2023
   awards:
-    - award: President's List
+    - award: President's List (3.9 GPA and above)
   summary: At SU I am taking coursework to learn more about Computer Science and Data Science. 
            I have studied Data Structures and Object Oriented Programming, primarily using C++ and C#. 
            Next quarter, I plan on taking Databases and Data Visualization.  
