--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,4 +1,11 @@
 # Recognitions
+- award: Microsoft Azure Fundamentals - AZ-900
+  organization: The Linux Foundation
+  year: 2021
+  summary:  <p>Certification Date - Nov 20, 2021<br>
+               Certification ID - I038-3299<br>
+               <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ca14ac1d-937d-4d23-9bf6-f11dd27d791e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+
 - award: CKA - Certified Kubernetes Administrator 
   organization: The Linux Foundation
   year: 2021
