--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,5 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
-
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Carolinas/Mid-Atlantic/Georgia/Tennessee Engineer of the Year
+  organization: Presidio
+  year: 2021
+  summary: Awarded the Carolinas/Mid-Atlantic/Georgia/Tennessee Engineer of the Year for talents in collabortion, network and security. Additionally I held regular cadence calls with local team to discuss, learn and train in automation of in-flight projects to limit mistakes and increase overall quality of services utilizing Python and JavaScript.
